# coze-cookbook

./: .gitignore  README.md
examples/audio_chat_with_vision_image/: README.md  http_chat.py  requirements.txt  websocket_chat.py
examples/custom_connector/: README.md
examples/custom_connector/device_bind_connector/: .env  app.py  bots.json
examples/custom_connector/device_bind_connector/templates/: devices.html
examples/custom_connector/none_auth_connector/: .env  app.py  requirements.txt
examples/custom_connector/none_auth_connector/templates/: base.html
examples/custom_connector/oauth_connector/: .env  .gitignore  app.py  coze_oauth_config.json
examples/custom_connector/oauth_connector/templates/: authorize.html  base.html  bots.html  chat.html  devices.html  error.html  index.html  login.html
examples/local_plugin/: README.md  main.py  plugin.json  plugin.yaml  pyproject.toml
examples/my_jay/: index.html  package-lock.json  package.json  vite.config.ts
examples/my_jay/src/: MyCozeCallUi.css  README.md  Speech2Tool.tsx  main.tsx  my-coze-api.tsx  your_own_config.ts
