[tool.poetry]
name = "coze-cookbook"
version = "0.1.0"
description = "Examples and guides for using the Coze API & SDK"
authors = ["chyroc <chyroc@bytedance.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cozepy = "^0.12.0"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pre-commit = "^2.9.0"
mypy = "^1.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = [
    "tests/"
]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_lines = [
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
